package(default_visibility = ["//visibility:public"])

java_library(
    name = "common",
    srcs = glob(
        ["src/main/java/**/*.java"],
    ),
    deps = [
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
        "@maven//:org_eclipse_milo_stack_core",
        "@maven//:org_slf4j_slf4j_api",
    ],
)
