package(default_visibility = ["//visibility:public"])

java_library(
    name = "util",
    srcs = glob(["src/main/java/**/*.java"]),
    exports = [
        "@maven//:com_google_guava_guava",
        "@maven//:org_eclipse_milo_sdk_client",
        "@maven//:org_eclipse_milo_stack_core",
        "@maven//:org_slf4j_slf4j_api",
    ],
    runtime_deps = [
        "@maven//:org_eclipse_milo_dictionary_manager",
        "@maven//:org_slf4j_slf4j_jdk14",
    ],
    deps = [
        "@maven//:com_google_guava_guava",
        "@maven//:org_bouncycastle_bcprov_jdk15on",
        "@maven//:org_eclipse_milo_bsd_parser",
        "@maven//:org_eclipse_milo_dictionary_reader",
        "@maven//:org_eclipse_milo_sdk_client",
        "@maven//:org_eclipse_milo_sdk_core",
        "@maven//:org_eclipse_milo_sdk_server",
        "@maven//:org_eclipse_milo_stack_core",
        "@maven//:org_slf4j_slf4j_api",
    ],
)
