package(default_visibility = ["//visibility:public"])

java_library(
    name = "util",
    srcs = glob(
        ["src/main/java/**/*.java"],
    ),
    deps = [
        "@maven//:org_eclipse_milo_dictionary_manager",
        "@maven//:org_eclipse_milo_sdk_core",
        "@maven//:org_eclipse_milo_sdk_server",
        "@maven//:org_eclipse_milo_stack_core",
        "@maven//:org_slf4j_slf4j_api",
    ],
)
