package(default_visibility = ["//visibility:public"])

java_library(
    name = "helloworld",
    srcs = glob(
        ["src/main/java/**/*.java"],
    ),
    deps = [
        "//eclipse-milo-example/server/util",
        "@maven//:com_google_guava_guava",
        "@maven//:org_eclipse_milo_sdk_core",
        "@maven//:org_eclipse_milo_sdk_server",
        "@maven//:org_eclipse_milo_stack_core",
        "@maven//:org_slf4j_slf4j_api",
    ],
)
